# adventofcode

./: .gitignore  Cargo.toml  LICENSE  README.md
2018/: Cargo.toml
2018/src/: day5.rs  day7.rs  day9.rs
2019/: Cargo.toml
2019/src/: day1.rs  day2.rs
2021/: Cargo.toml
2021/src/: day1.rs  main.rs
src/: day1.rs  day10.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs  request.rs
