[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Christopher MacGown <chris@glassbear.com>"]

[dependencies]
bindata = "0.1.1"
bindata-impl = "0.1.0"
chrono = "0.4.6"
counter = "0.4"
itertools = "0.7.11"
levenshtein = "1.0.3"
nalgebra = "0.16"
reqwest = "0.9.5"
spade = "1.6"
voronoi = "0.1.4"
